--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@types/material-ui": "^0.21.5",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
     "react": "^16.4.2",
