--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ cache:
   directories:
   - "web/node_modules"
 script:
+  - cd $TRAVIS_BUILD_DIR/api
+  - yarn install
+  - yarn build
   - cd $TRAVIS_BUILD_DIR/web
   - yarn install
   - yarn test
