--- a/api/package.json
+++ b/api/package.json
@@ -4,16 +4,15 @@
   "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel src/ -d dist",
-    "serve": "babel -w src/ -d dist/ | nodemon --watch dist"
+    "build": "tsc",
+    "serve": "tsc -w | nodemon --watch dist"
   },
   "dependencies": {
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1"
+    "@types/express": "^4.16.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.0.1"
   }
 }
