--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,7 +4,8 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es5"
+    "target": "es5",
+    "lib": ["es6"]
   },
   "include": [
     "./src/**/*"
