--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "test": "jest"
+    "test": "tslint 'src/**/*.ts' && jest",
+    "lint": "tslint 'src/**/*.ts'"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.13",
@@ -17,6 +18,7 @@
     "jest": "^23.5.0",
     "react-test-renderer": "^16.4.2",
     "ts-jest": "^23.1.4",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
   "dependencies": {
