Add deploy section to travis yml

--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "preinstall": "npm i -g parcel",
     "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
     "lint": "tslint 'src/**/*.ts'"
   },
