--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,9 @@
   "author": "Dmitriy Dubson <d.dubson@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "preinstall": "npm i -g parcel",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "start": "./node_modules/.bin/parcel src/index.html",
+    "start:dev": "./node_modules/.bin/serve -p 8080 -s dist",
+    "build": "./node_modules/.bin/parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
     "lint": "tslint 'src/**/*.ts'"
   },
@@ -18,7 +18,9 @@
     "enzyme-adapter-react-16": "^1.3.0",
     "enzyme-react-16-adapter-setup": "^0.1.0",
     "jest": "^23.5.0",
+    "parcel": "^1.9.7",
     "react-test-renderer": "^16.4.2",
+    "serve": "^10.0.0",
     "ts-jest": "^23.1.4",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
