Fix up api packaging for cf

--- a/manifest.yml
+++ b/manifest.yml
@@ -5,7 +5,6 @@ applications:
   buildpacks:
     - https://github.com/cloudfoundry/staticfile-buildpack.git
 - name: book-store-app-api
-  path: api/dist
-  command: node App.js
+  path: api
   buildpacks:
     - https://github.com/cloudfoundry/nodejs-buildpack.git
