--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "jest": "^23.5.0",
+    "nodemon": "^1.18.4",
     "ts-jest": "^23.1.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
