Add start command for api/ project

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,5 +6,6 @@ applications:
     - https://github.com/cloudfoundry/staticfile-buildpack.git
 - name: book-store-app-api
   path: api
+  command: node dist/App.js
   buildpacks:
     - https://github.com/cloudfoundry/nodejs-buildpack.git
