--- a/manifest.yml
+++ b/manifest.yml
@@ -2,10 +2,16 @@
 applications:
 - name: book-store-app-web
   path: web/
+  routes:
+    - route: book-store-app-web.apps.pcfone.io
+  env:
+    BOOKS_API_URI: https://book-store-app-api.apps.pcfone.io
   buildpacks:
     - https://github.com/cloudfoundry/staticfile-buildpack.git
 - name: book-store-app-api
   path: api
   command: node dist/App.js
+  routes:
+  - route: book-store-app-api.apps.pcfone.io
   buildpacks:
     - https://github.com/cloudfoundry/nodejs-buildpack.git
