--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "author": "Dmitriy Dubson <d.dubson@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/parcel src/index.html",
+    "start": "BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html",
     "build": "./node_modules/.bin/parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
     "lint": "tslint 'src/**/*.ts'"
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.5.1",
+    "@types/axios": "^0.14.0",
     "@types/material-ui": "^0.21.5",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
+    "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
