--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,11 @@
     "start": "BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html",
     "build": "./node_modules/.bin/parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
+    "test:pact": "BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
     "lint": "tslint 'src/**/*.ts'"
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^5.9.1",
     "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.1",
     "enzyme": "^3.5.0",
@@ -49,7 +51,7 @@
     "setupFiles": [
       "enzyme-react-16-adapter-setup"
     ],
-    "testRegex": "(/test/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testRegex": "(/test/.*|(\\.|/)(test))\\.(test.tsx?)$",
     "testPathIgnorePatterns": [
       "/dist/"
     ]
