Add test:pact step in build

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
 - cd $TRAVIS_BUILD_DIR/web
 - yarn install
 - yarn test --collectCoverage
+- yarn test:pact
 - codecov
 - yarn build
 - cd $TRAVIS_BUILD_DIR
