--- a/web/package.json
+++ b/web/package.json
@@ -28,13 +28,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.5.1",
-    "@types/axios": "^0.14.0",
     "@types/material-ui": "^0.21.5",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
+    "@types/shortid": "^0.0.29",
     "axios": "^0.18.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "shortid": "^2.2.13"
   },
   "jest": {
     "transform": {
