--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -11,7 +11,8 @@
     "jsx": "react"
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*",
+    "./test/**/*"
   ],
   "exclude": [
     "node_modules"
