Add test:watch to watch tests

--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "start": "BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html",
     "build": "./node_modules/.bin/parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
+    "test:watch": "jest --watchAll",
     "test:pact": "BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
     "lint": "tslint 'src/**/*.ts'"
   },
