--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "enzyme-adapter-react-16": "^1.3.0",
     "enzyme-react-16-adapter-setup": "^0.1.0",
     "jest": "^23.5.0",
+    "node-sass": "^4.9.3",
     "parcel": "^1.9.7",
     "react-test-renderer": "^16.4.2",
     "serve": "^10.0.0",
