--- a/web/package.json
+++ b/web/package.json
@@ -29,14 +29,14 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "@material-ui/core": "^1.5.1",
-    "@types/axios": "^0.14.0",
-    "@types/material-ui": "^0.21.5",
+    "@material-ui/core": "^3.1.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
+    "@types/shortid": "^0.0.29",
     "axios": "^0.18.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "shortid": "^2.2.13"
   },
   "jest": {
     "transform": {
@@ -50,6 +50,9 @@
       "json",
       "node"
     ],
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/test/__mocks__/styleMock.js"
+    },
     "setupFiles": [
       "enzyme-react-16-adapter-setup"
     ],
