--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,15 @@
     "test": "tslint 'src/**/*.ts' && jest",
     "test:watch": "jest --watchAll",
     "test:pact": "BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --config video=false",
     "lint": "tslint 'src/**/*.ts'"
   },
   "devDependencies": {
     "@pact-foundation/pact": "^5.9.1",
     "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.1",
+    "cypress": "^3.1.0",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.0",
     "enzyme-react-16-adapter-setup": "^0.1.0",
@@ -29,7 +32,6 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "@material-ui/core": "^3.1.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
     "@types/shortid": "^0.0.29",
