--- a/web/package.json
+++ b/web/package.json
@@ -5,11 +5,11 @@
   "author": "Dmitriy Dubson <d.dubson@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html",
+    "start": "cross-env BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html",
     "build": "./node_modules/.bin/parcel build src/index.html",
     "test": "tslint 'src/**/*.ts' && jest",
     "test:watch": "jest --watchAll",
-    "test:pact": "BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
+    "test:pact": "cross-env BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "lint": "tslint 'src/**/*.ts' --fix"
@@ -18,6 +18,7 @@
     "@pact-foundation/pact": "^5.9.1",
     "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.1",
+    "cross-env": "^5.2.0",
     "cypress": "^3.1.0",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.0",
