--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.3.0",
     "enzyme-react-16-adapter-setup": "^0.1.0",
     "jest": "^23.5.0",
+    "jest-transform-stub": "^1.0.0",
     "node-sass": "^4.9.3",
     "parcel": "^1.9.7",
     "react-test-renderer": "^16.4.2",
@@ -54,7 +55,7 @@
       "node"
     ],
     "moduleNameMapper": {
-      "\\.(css|less|sass|scss)$": "<rootDir>/test/__mocks__/styleMock.js"
+      "\\.(css|less|sass|scss|svg|png)$": "jest-transform-stub"
     },
     "setupFiles": [
       "enzyme-react-16-adapter-setup"
