Switch to bookmarkr application

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ cache:
 branches:
   only:
   - master
-  - cypress
 install:
 - npm i -g codecov
 - gem install pact-provider-verifier
@@ -20,17 +19,17 @@ script:
 - yarn test --collectCoverage
 - codecov
 - yarn build
-- yarn serve &
+#- yarn serve &
 - cd $TRAVIS_BUILD_DIR/web
 - yarn install --frozen-lockfile
 - yarn test --collectCoverage
-- yarn test:pact
-- yarn start &
+#- yarn test:pact
+#- yarn start &
 - codecov
 - yarn build
-- yarn cypress:run
+#- yarn cypress:run
 - cd $TRAVIS_BUILD_DIR
-- ./pact-provider-verify.sh
+#- ./pact-provider-verify.sh
 deploy:
   provider: cloudfoundry
   api: https://api.run.pcfone.io
