--- a/web/package.json
+++ b/web/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^16.0.7",
     "@types/shortid": "^0.0.29",
     "axios": "^0.18.0",
+    "firebase": "^5.5.8",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "shortid": "^2.2.13"
