Optimize web deploy

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
 - name: book-store-app-web
-  path: web/
+  path: web/dist/
   routes:
     - route: book-store-app-web.apps.pcfone.io
   env:
