Fix linter errors

--- a/web/package.json
+++ b/web/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "start": "cross-env BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html --out-dir dist/bundle",
     "build": "./node_modules/.bin/parcel build src/index.html --out-dir dist/bundle/",
-    "test": "tslint 'src/**/*.ts' && jest",
+    "test": "tslint 'src/**/*.ts' 'src/**/*.tsx' && jest",
     "test:watch": "jest --watchAll",
     "test:pact": "cross-env BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "lint": "tslint 'src/**/*.ts' --fix"
+    "lint": "tslint 'src/**/*.ts' 'src/**/*.tsx' --fix"
   },
   "devDependencies": {
     "@pact-foundation/pact": "^5.9.1",
