--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,8 @@
   "author": "Dmitriy Dubson <d.dubson@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/index.html --out-dir dist/bundle",
-    "build": "./node_modules/.bin/parcel build src/index.html --out-dir dist/bundle/",
+    "start": "cross-env BOOKS_API_URI=http://localhost:8080 ./node_modules/.bin/parcel src/app/index.html --out-dir dist/bundle",
+    "build": "./node_modules/.bin/parcel build src/app/index.html --out-dir dist/bundle/",
     "test": "tslint 'src/**/*.ts' 'src/**/*.tsx' && jest",
     "test:watch": "jest --watchAll",
     "test:pact": "cross-env BOOKS_API_URI=http://localhost:1122 jest --config ./config/pact/jest.config.js --runInBand",
