--- a/web/package.json
+++ b/web/package.json
@@ -34,10 +34,14 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "@types/auth0-js": "^8.11.7",
+    "@types/history": "^4.7.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
     "@types/shortid": "^0.0.29",
+    "auth0-js": "^9.8.2",
     "axios": "^0.18.0",
+    "history": "^4.7.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "shortid": "^2.2.13"
