--- a/web/package.json
+++ b/web/package.json
@@ -34,10 +34,14 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "@types/highlight.js": "^9.12.3",
+    "@types/marked": "^0.4.2",
     "@types/react": "^16.4.12",
     "@types/react-dom": "^16.0.7",
     "@types/shortid": "^0.0.29",
     "axios": "^0.18.0",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.5.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "shortid": "^2.2.13"
