--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,13 @@ install:
 - gem install pact-provider-verifier
 script:
 - cd $TRAVIS_BUILD_DIR/api
-- yarn install --frozen-lockfile
+- yarn install
 - yarn test --collectCoverage
 - codecov
 - yarn build
 #- yarn serve &
 - cd $TRAVIS_BUILD_DIR/web
-- yarn install --frozen-lockfile
+- yarn install
 - yarn test --collectCoverage
 #- yarn test:pact
 - yarn start &
